k8s/overlays/local/oidc-mock-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-mock-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /oidc-mock-server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: oidc-mock-server
            port:
              number: 80
